--- a/app/views/users/_user_income.html.erb
+++ b/app/views/users/_user_income.html.erb
@@ -24,7 +24,7 @@
     </div>
     <div class="col-md-4">
       <%= form_tag user_user_income_path(@user), method: :get do %>
-          <%= text_field_tag :project_search, params[:project_search], id: 'project_search_input' %>
+          <%= hidden_field_tag :project_search, params[:project_search], id: 'project_search_input' %>
           <button formaction=" <%= user_user_income_path(@user, format: 'pdf') %>" ,type="submit" , class="btn btn-default">Pdf</button>
           <button formaction=" <%= user_user_income_path(@user, format: 'csv') %>" ,type="submit" , class="btn btn-default">Csv</button>
           <button formaction=" <%= user_user_income_path(@user, format: 'xlsx') %>" ,type="submit" , class="btn btn-default">Excel</button>
