--- a/app/views/users/_user_income.html.erb
+++ b/app/views/users/_user_income.html.erb
@@ -1,7 +1,7 @@
 <div class="box">
   <div class="row">
 
-    <%= form_tag user_user_income_path(@user), method: :get, remote: true do %>
+    <%= form_tag user_user_income_path(@user), method: :get do %>
 
         <div class="btn-group col-md-5 pull-left">
             <div class="dropdown show">
