--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
+<%= render 'users/menu' %>
+<div class="box">
 <h1>Editing User</h1>
 
-<%= render 'form', user: @user %>
+  <%= render 'form', user: @user %>
 
+</div>
 
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
