--- a/app/views/users/user_data.html.erb
+++ b/app/views/users/user_data.html.erb
@@ -1,73 +1,72 @@
-<%= render 'users/menu' %>
+<%= render 'menu' %>
 
 <div class="box">
-  <p>
-    <strong>Email:</strong>
-    <%= @user.email %>
-  </p>
+<p>
+  <strong>Email:</strong>
+  <%= @user.email %>
+</p>
 
   <p>
     <strong>Username:</strong>
     <%= @user.username %>
-  </p>
+</p>
 
   <p>
     <strong>First name:</strong>
     <%= @user.first_name %>
-  </p>
+</p>
 
   <p>
     <strong>Last name:</strong>
     <%= @user.last_name %>
-  </p>
+</p>
 
   <p>
     <strong>Street no:</strong>
     <%= @user.street_no %>
-  </p>
+</p>
 
   <p>
     <strong>Street:</strong>
     <%= @user.street %>
-  </p>
+</p>
 
   <p>
     <strong>City:</strong>
     <%= @user.city %>
-  </p>
+</p>
 
   <p>
     <strong>State:</strong>
     <%= @user.state %>
-  </p>
+</p>
 
   <p>
     <strong>Country:</strong>
     <%= @user.country %>
-  </p>
+</p>
 
   <p>
     <strong>Post code:</strong>
     <%= @user.post_code %>
-  </p>
+</p>
 
   <p>
     <strong>Abn:</strong>
     <%= @user.abn %>
-  </p>
-  <p>
-  <p>
-  <table>
-    <tr>
-      <th><strong>Rate:</strong></th>
-      <th><strong>Date:</strong></th>
-    </tr>
-    <% @user.pay_rates.each do |u| %>
+</p><p>
+<p>
+<table>
+  <tr>
+    <th><strong>Rate:</strong></th>
+    <th><strong>Date:</strong></th>
+  </tr>
+  <% @user.pay_rates.each do |u| %>
 
-      <tr>
-        <td><%= u.rate %></td>
-        <td><%= u.created_at.strftime("%A %b %d") %></td>
-      </tr>
-    <% end %>
-  </table>
-</div></div>
+    <tr>
+      <td><%= u.rate %></td>
+      <td><%= u.created_at.strftime("%A %b %d") %></td>
+    </tr>
+  <% end %>
+</table>
+</div>
