--- a/app/views/users/user_permission.html.erb
+++ b/app/views/users/user_permission.html.erb
@@ -1,19 +1,37 @@
+<%= render 'users/menu' %>
 <div class="box">
-  <p id="notice"><%= notice %></p>
-  <div><h1><%= @user.full_name %></h1></div>
-</div>
-<div class="box">
-  <div class="btn-group">
-    <%= link_to 'User Data', user_user_data_path(@user), remote: true, class: 'btn btn-default' %>
-    <%= link_to 'User Permission', user_user_permission_path(@user), remote: true, class: 'btn btn-default' %>
-    <%= link_to 'User Income', user_user_income_path(@user), remote: true, class: 'btn btn-default' %>
-    <%= link_to 'Edit', edit_user_path(@user), remote: true, class: 'btn btn-default' %>
-    <%= link_to 'Back', users_path, class: 'btn btn-default' %>
-  </div>
+  <h1><%= @user.full_name %></h1>
+
+  <%= form_tag remote: true, url: user_user_permission_path(@user) do %>
+    <div class="row outline">
+      <div class="col-xs-2">
+        Model
+      </div>
+      <div class="col-xs-2">
+        Read
+      </div>
+      <div class="col-xs-2">
+        Edit
+      </div>
+
+    </div>
+    <% User::PERMISSIONS.each do |model, permission| %>
+      <div class="row">
+        <div class="col-xs-2">
+          <%= model %>
+        </div>
+        <%= check_box_tag "#{model}_#{:edit}", '', @user.has_role?(:edit, model.classify.constantize) %>
+
+        <div class="col-xs-2">
+          <%= check_box_tag "#{model}_#{:read}", '', @user.has_role?(:read, model.classify.constantize) %>
+
+        </div>
+      </div>
+    <% end %>
+
+    <%= submit_tag 'Save', class: 'btn btn-default' %>
+
+  <% end %>
 </div>
 
-<div id="user_partial">
-  <%= render 'users/user_permission' %>
-</div>
-<div>
 </div>
