--- a/app/views/users/_menu.html.erb
+++ b/app/views/users/_menu.html.erb
@@ -6,6 +6,7 @@
     <%= link_to 'User Data', user_user_data_path(@user), class: 'btn btn-default' %>
     <%= link_to 'User Permission', user_user_permission_path(@user), class: 'btn btn-default' %>
     <%= link_to 'User Income', user_user_income_path(@user), class: 'btn btn-default' %>
+    <%= link_to 'User Obligations', user_pay_obligations_path(@user), class: 'btn btn-default' %>
     <%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-default' %>
     <%= link_to 'Back', users_path, class: 'btn btn-default' %>
   </div>
